[API_GATEWAY][SETUP] : api gateway setup and mfa login